--- a/_src/assets/scss/layout/_base.scss
+++ b/_src/assets/scss/layout/_base.scss
@@ -21,7 +21,7 @@ html{
 }
 
 .click-arrow{
-    transition: transform 3s;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), color 0.5s ease;
     &:hover{
         color: $color-orange;
     }
