--- a/_src/assets/scss/layout/_formfill.scss
+++ b/_src/assets/scss/layout/_formfill.scss
@@ -7,6 +7,7 @@
         display:flex;
         flex-direction: row;
         justify-content: space-between;
+        
         .contain-title{
             display: flex;
             align-items: center;
@@ -28,12 +29,16 @@
                 width: 78px;
                 padding-left: 10px;
                 margin: 0;
+
             }
             .fa-chevron-down{
                 color: $color-gun-metal;  
             }
         }   
     } 
+    .asterisk {
+        color: $color-orange;
+    }
     .fill--inputs{
         display:flex;
         flex-direction: column;
@@ -54,6 +59,7 @@
             margin-top: 7px;
             margin-bottom: 20px;
             align-items: flex-start;
+            padding-left: 10px;
         }
         .button-image{
             display:grid;
