--- a/_src/templates/partials/_formfill.html
+++ b/_src/templates/partials/_formfill.html
@@ -8,32 +8,32 @@
     </div>
     <div class="collapsible-container" id="second-form">
         <div class="fill--inputs">
-            <label class="label name" for="name">Nombre completo *</label>
+            <label class="label name" for="name">Nombre completo <span class="asterisk">*</span></label>
             <input class="input able name" type="text" id="name" placeholder="Ej: Sally Jill" name="name">
 
-            <label class="label position" for="position">Puesto *</label>
+            <label class="label position" for="position">Puesto <span class="asterisk">*</span></label>
             <input class="input able position" type="text" id="position" placeholder="Ej: Front-end" name="job">
 
             <div class="button-image">
-                <label class="label img" for="image">Imagen de perfil</label>
+                <label class="label img" for="image">Imagen de perfil <span class="asterisk">*</span></label>
                 <button class="btn js__profile-trigger" type="button" id="upload-image">Añadir imagen</button>
                 <input type="file" name="photo" id="img-selector"
                     class="btn action__hiddenField js__profile-upload-btn">
                 <div class="square js__profile-preview"></div>
             </div>
 
-            <label class="label email" for="email">Email *</label>
+            <label class="label email" for="email">Email <span class="asterisk">*</span></label>
             <input class="input able email" type="email" id="email" placeholder="Ej:sally-hill@gmail.com" name="email">
 
             <label class="label phone" for="phone">Teléfono</label>
             <input class="input able phone" type="number" pattern="" id="phone" placeholder="Ej:555-55-55-55">
 
 
-            <label class="label linkedin" for="linkedin">Linkedin *</label>
-            <input class="input able linkedin" type="url" id="linkedin" placeholder="Ej: sally.hill"
-                name="linkedin" required>
+            <label class="label linkedin" for="linkedin">Linkedin <span class="asterisk">*</span></label>
+            <input class="input able linkedin" type="url" id="linkedin" placeholder="Ej: sally.hill" name="linkedin"
+                required>
 
-            <label class="label github" for="git">Github *</label>
+            <label class="label github" for="git">Github <span class="asterisk">*</span></label>
             <input class="input able github" type="text" id="git" placeholder="Ej:sally-hill" name="github">
         </div>
     </div>
