--- a/_src/assets/scss/pages/_home.scss
+++ b/_src/assets/scss/pages/_home.scss
@@ -113,13 +113,12 @@
     font-size: rem(16);
     color: $color-white;
     text-transform: uppercase;
-    transition: transform 2s;  
-    font-weight: 600;   
+    font-weight: 600;
+    transition: all 0.4s ease-in; 
     
     &:hover{
-        color: $color-white;
         background-color: $color-orange;
-        transform: rotateY(130deg);
+        box-sizing: border-box;
     }
 }
 
