--- a/_src/templates/cardpage.html
+++ b/_src/templates/cardpage.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CocoLab Awesome Profile Cards</title>
-  <link rel="icon" href="./catrina.png" />
+  <title> Awesome Profile Cards</title>
   <link rel="stylesheet" href="./assets/css/main.css" />
   <script src="https://kit.fontawesome.com/1916f943e3.js" crossorigin="anonymous"></script>
 </head>
